--- a/index.html
+++ b/index.html
@@ -4,51 +4,51 @@
     <meta charset="utf-8">
     <title>Login y register</title>
     <link rel="shortcut icon" href="/assets/favicon.ico">
-    <link rel="stylesheet" href="./estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
     <div class="container">
         <form class="form" id="login">
             <h1 class="form__title">Login</h1>
             <div class="form__message form__message--error"></div>
-            <div class="form__input-group">
-                <input type="text" class="form__input" autofocus placeholder="Username or email">
+            <div class="formulario-input-group">
+                <input type="text" class="formulario-input" autofocus placeholder="Usuario o Correo">
+                <div class="form-input-error-message"></div>
+            </div>
+            <div class="formulario-input-group">
+                <input type="password" class="formulario-input" autofocus placeholder="contraseña">
                 <div class="form__input-error-message"></div>
             </div>
-            <div class="form__input-group">
-                <input type="password" class="form__input" autofocus placeholder="Password">
-                <div class="form__input-error-message"></div>
-            </div>
-            <button class="form__button" type="submit">Continue</button>
+            <button class="form__button" type="submit">Continuar</button>
             <p class="form__text">
-                <a href="#" class="form__link">Forgot your password?</a>
+                <a href="#" class="form__link">Has olvidado tu contraseña?</a>
             </p>
             <p class="form__text">
-                <a class="form__link" href="./" id="linkCreateAccount">Don't have an account? Create account</a>
+                <a class="form__link" href="./" id="linkCreateAccount">No tienes cuenta? Create Una </a>
             </p>
         </form>
         <form class="form form--hidden" id="createAccount">
-            <h1 class="form__title">Create Account</h1>
+            <h1 class="form__title">Crear Cuenta</h1>
             <div class="form__message form__message--error"></div>
-            <div class="form__input-group">
-                <input type="text" id="signupUsername" class="form__input" autofocus placeholder="Username">
-                <div class="form__input-error-message"></div>
+            <div class="form-input-group">
+                <input type="text" id="signupUsername" class="formulario-input" autofocus placeholder="Username">
+                <div class="formulario__input-error-message"></div>
             </div>
-            <div class="form__input-group">
-                <input type="text" class="form__input" autofocus placeholder="Email Address">
-                <div class="form__input-error-message"></div>
+            <div class="formulario-input-group">
+                <input type="text" class="formulario-input" autofocus placeholder="Email Address">
+                <div class="formulario-input-error-message"></div>
             </div>
-            <div class="form__input-group">
-                <input type="password" class="form__input" autofocus placeholder="Password">
-                <div class="form__input-error-message"></div>
+            <div class="formulario-input-group">
+                <input type="password" class="formulario-input" autofocus placeholder="Password">
+                <div class="formulario-input-error-message"></div>
             </div>
-            <div class="form__input-group">
-                <input type="password" class="form__input" autofocus placeholder="Confirm password">
-                <div class="form__input-error-message"></div>
+            <div class="formulario-input-group">
+                <input type="password" class="formulario-input" autofocus placeholder="Confirm password">
+                <div class="formulario-input-error-message"></div>
             </div>
-            <button class="form__button" type="submit">Continue</button>
+            <button class="form__button" type="submit">Continuar</button>
             <p class="form__text">
-                <a class="form__link" href="./" id="linkLogin">Already have an account? Sign in</a>
+                <a class="form__link" href="./" id="linkLogin">Ya tienes tu cuenta? Accede Ahora mismio</a>
             </p>
         </form>
     </div>
