JavaScript validacion fase 1

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
 
         <!-- Aqui empieza el formulario de el login -->
-        <form class="form" id="login">
-            <h1 class="form__title">Login</h1>
+        <form class="formulario" id="formulario">
+            <label for="form__title" class="form__title"></label>
             <div class="form__message form__message--error"></div>
             <div class="formulario-input-group">
 
