--- a/Login.html
+++ b/Login.html
@@ -12,7 +12,10 @@
 
         <!-- Aqui empieza el formulario de el login -->
         <form class="formulario" id="formulario">
-            <label for="form__title" class="form__title"></label>
+            <div  class="formulario-title">Login</div>
+            <div class="formulario-usuario" id="formulario-usuario">
+                <img src="./Img/usuario.png">
+            </div>
             <div class="form__message form__message--error"></div>
             <div class="formulario-input-group">
 
@@ -27,11 +30,11 @@
                 <div class="form__input-error-message"></div>
             </div>
             <!-- Boton para acceder al menu principal -->
-            <button class="form__button" type="submit">Continuar</button>
+            <button class="formulario-button" type="submit">Continuar</button>
             <p class="form__text">
 
                 <!-- Link para restablecer la contraseña -->
-                <a href="./" class="form__link" id="linkCreateAccount">Has olvidado tu contraseña?</a>
+                <a href="#" class="form__link" >Has olvidado tu contraseña?</a>
             </p>
 
             <!-- Link para crear cuenta e ir al registro -->
@@ -39,40 +42,41 @@
                 <a class="form__link" href="./" id="linkCreateAccount">No tienes cuenta? Create Una aqui.</a>
             </p>
 
-            <!-- Registro de un usuario -->
+                           
+           <!-- Registro de un usuario -->
         </form>
         <form class="form form--hidden" id="createAccount">
             <h1 class="form__title">Crear Cuenta</h1>
             <div class="form__message form__message--error"></div>
-            <div class="form-input-group">
+            <div class="formulario-input-group">
 
                 <!-- Crear Usuario -->
-                <input type="text" id="signupUsername" class="formulario-input" autofocus placeholder="Username">
+                <input type="text" id="signupUsername" class="formulario-input" autofocus placeholder="Usuario">
                 <div class="formulario__input-error-message"></div>
             </div>
 
             <!-- Correo -->
             <div class="formulario-input-group">
-                <input type="text" class="formulario-input" autofocus placeholder="Email Address">
+                <input type="text" class="formulario-input" autofocus placeholder="Correo electronico">
                 <div class="formulario-input-error-message"></div>
             </div>
 
-            <!-- Aqui el usuario pone la contraseña que se desee -->
+            <!-- Aqui el usuario pondra la contraseña que se desee -->
             <div class="formulario-input-group">
-                <input type="password" class="formulario-input" autofocus placeholder="Password">
+                <input type="password" class="formulario-input" autofocus placeholder="Contraseña">
                 <div class="formulario-input-error-message"></div>
             </div>
 
             <!-- Confirmar contraseña  -->
             <div class="formulario-input-group">
-                <input type="password" class="formulario-input" autofocus placeholder="Confirm password">
+                <input type="password" class="formulario-input" autofocus placeholder="Confirmar contraseña">
                 <div class="formulario-input-error-message"></div>
                 
                 <!-- Aqui se termina el registro -->
             </div>
 
             <!-- Boton para acceder a el login y terminar el Registro  -->
-            <button class="form__button" type="submit">Continuar</button>
+            <button class="formulario-button" type="submit">Continuar</button>
             <p class="form__text">
 
                 <!-- Link Para acceder a el login  -->
