--- a/Login.html
+++ b/Login.html
@@ -12,7 +12,7 @@
 
         <!-- Aqui empieza el formulario de el login -->
         <form class="formulario" id="formulario">
-            <div  class="formulario-title">Login</div>
+            <div  class="formulario-title"><h3>Login</h3></div>
             <div class="formulario-usuario" id="formulario-usuario">
                 <img src="./Img/usuario.png">
             </div>
@@ -39,7 +39,7 @@
 
             <!-- Link para crear cuenta e ir al registro -->
             <p class="form__text">
-                <a class="form__link" href="./" id="linkCreateAccount">No tienes cuenta? Create Una aqui.</a>
+                <a class="formulario-link" href="./" id="CreateAccount">No tienes cuenta? Create Una aqui.</a>
             </p>
 
                            
