--- a/Login.html
+++ b/Login.html
@@ -12,22 +12,22 @@
 
         <!-- Aqui empieza el formulario de el login -->
         <form class="formulario" id="login">
-            <div  class="formulario-title"><h3>Login</h3></div>
+            <div  class="formulario-title"><h2>Acceder</h2></div>
             <div class="formulario-usuario" id="formulario-usuario">
                 <img src="./Img/usuario.png" class="img" id="img">
             </div>
-            <div class="formulario-message formulario-message--error"></div>
+            <div class="formulario-mensaje formulario-mensaje-error"></div>
             <div class="formulario-input-group">
 
                 <!-- Aqui ingresa con usuario o correo  -->
                 <input type="text" class="formulario-input" id="formulario-input" name="usuario" autofocus placeholder="Usuario o Correo">
-                <div class="formulario-input-error-message"></div>
+                <div class="formulario-input-error-mensaje"></div>
             </div>
 
             <!-- Contraseña -->
             <div class="formulario-input-group">
                 <input type="password" class="formulario-input" autofocus placeholder="contraseña">
-                <div class="formulario-input-error-message"></div>
+                <div class="formulario-input-error-mensaje"></div>
             </div>
             <!-- Boton para acceder al menu principal -->
             <button class="formulario-button" type="submit">Continuar</button>
@@ -45,32 +45,32 @@
                            
            <!-- Registro de un usuario -->
         </form>
-        <form class="form formulario-hidden" id="createAccount">
+        <form class="formulario formulario-hidden" id="createAccount">
             <h1 class="formulario-title">Crear Cuenta</h1>
-            <div class="formulario-message formuario-message--error"></div>
+            <div class="formulario-mensaje formulario-mensaje-error"></div>
             <div class="formulario-input-group">
 
                 <!-- Crear Usuario -->
-                <input type="text" id="signupUsername" class="formulario-input" autofocus placeholder="Usuario">
-                <div class="formulario__input-error-message"></div>
+                <input type="text" id="IngresarUsuario" class="formulario-input" autofocus placeholder="Usuario">
+                <div class="formulario-input-error-mensaje"></div>
             </div>
 
             <!-- Correo -->
             <div class="formulario-input-group">
                 <input type="text" class="formulario-input" autofocus placeholder="Correo electronico">
-                <div class="formulario-input-error-message"></div>
+                <div class="formulario-input-error-mensaje"></div>
             </div>
 
             <!-- Aqui el usuario pondra la contraseña que se desee -->
             <div class="formulario-input-group">
                 <input type="password" class="formulario-input" autofocus placeholder="Contraseña">
-                <div class="formulario-input-error-message"></div>
+                <div class="formulario-input-error-mensaje"></div>
             </div>
 
             <!-- Confirmar contraseña  -->
             <div class="formulario-input-group">
                 <input type="password" class="formulario-input" autofocus placeholder="Confirmar contraseña">
-                <div class="formulario-input-error-message"></div>
+                <div class="formulario-input-error-mensaje"></div>
                 
                 <!-- Aqui se termina el registro -->
             </div>
