--- a/Login.html
+++ b/Login.html
@@ -26,7 +26,7 @@
 
             <!-- Contraseña -->
             <div class="formulario-input-group">
-                <input type="password" class="formulario-input" autofocus placeholder="contraseña">
+                <input type="password" class="formulario-input" name="password" autofocus placeholder="contraseña" >
                 <div class="formulario-input-error-mensaje"></div>
             </div>
             <!-- Boton para acceder al menu principal -->
@@ -51,25 +51,25 @@
             <div class="formulario-input-group">
 
                 <!-- Crear Usuario -->
-                <input type="text" id="IngresarUsuario" class="formulario-input" autofocus placeholder="Usuario">
+                <input type="text" id="IngresarUsuario" class="formulario-input" name="usuario" autofocus placeholder="Usuario" >
                 <div class="formulario-input-error-mensaje"></div>
             </div>
 
             <!-- Correo -->
             <div class="formulario-input-group">
-                <input type="text" class="formulario-input" autofocus placeholder="Correo electronico">
+                <input type="text" class="formulario-input" name="correo" autofocus placeholder="Correo electronico">
                 <div class="formulario-input-error-mensaje"></div>
             </div>
 
             <!-- Aqui el usuario pondra la contraseña que se desee -->
             <div class="formulario-input-group">
-                <input type="password" class="formulario-input" autofocus placeholder="Contraseña">
+                <input type="password" class="formulario-input" name="password" autofocus placeholder="Contraseña">
                 <div class="formulario-input-error-mensaje"></div>
             </div>
 
             <!-- Confirmar contraseña  -->
             <div class="formulario-input-group">
-                <input type="password" class="formulario-input" autofocus placeholder="Confirmar contraseña">
+                <input type="password" class="formulario-input" name="password2" autofocus placeholder="Confirmar contraseña">
                 <div class="formulario-input-error-mensaje"></div>
                 
                 <!-- Aqui se termina el registro -->
